{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 840,
  "lineage": "c4c55dc4-b3f9-7925-01c0-1b53f0150b9d",
  "resources": [
    {
      "module": "module.eks_deployment[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:security-group/sg-01dd85e5f473d570e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-01dd85e5f473d570e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a57b4fe84279e33c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cometeks-cluster-20230601160934042400000009",
            "name_prefix": "cometeks-cluster-",
            "owner_id": "897196112581",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "cometeks-cluster",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cometeks-cluster",
              "Terraform_Managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_deployment[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:security-group/sg-0a57b4fe84279e33c",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a57b4fe84279e33c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dd85e5f473d570e"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dd85e5f473d570e"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dd85e5f473d570e"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dd85e5f473d570e"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dd85e5f473d570e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dd85e5f473d570e"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "cometeks-node-2023060116093425260000000a",
            "name_prefix": "cometeks-node-",
            "owner_id": "897196112581",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "cometeks-node",
              "Terraform_Managed": "true",
              "kubernetes.io/cluster/cometeks": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cometeks-node",
              "Terraform_Managed": "true",
              "kubernetes.io/cluster/cometeks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_deployment[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3676537896",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01dd85e5f473d570e",
            "security_group_rule_id": "sgr-0a1a634d36a7e139d",
            "self": false,
            "source_security_group_id": "sg-0a57b4fe84279e33c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_deployment[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1660654052",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-0b643fbc8b082c731",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2034340162",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-05def712768544616",
            "self": false,
            "source_security_group_id": "sg-01dd85e5f473d570e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3286074324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-0461bba5350921548",
            "self": false,
            "source_security_group_id": "sg-01dd85e5f473d570e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-178250818",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-07d5cd992f45277e8",
            "self": false,
            "source_security_group_id": "sg-01dd85e5f473d570e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-432265315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-0a2d182570181d0dc",
            "self": false,
            "source_security_group_id": "sg-01dd85e5f473d570e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2103634856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-05e0b84bdebbff3c3",
            "self": false,
            "source_security_group_id": "sg-01dd85e5f473d570e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2887365138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-0357f1671d1bc48ea",
            "self": false,
            "source_security_group_id": "sg-01dd85e5f473d570e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2229382237",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-0a9fac1d5aadc635a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2845492375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-0523c1c456b7bea76",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-231040888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a57b4fe84279e33c",
            "security_group_rule_id": "sgr-0be490a99200f90f6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_deployment[0].module.eks_blueprints_kubernetes_addons.module.aws_cloudwatch_metrics[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "amazon-cloudwatch",
            "metadata": [
              {
                "generation": 0,
                "name": "amazon-cloudwatch",
                "resource_version": "3585",
                "uid": "3edb885c-b18c-494f-b199-ef37567a058a"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks_deployment.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_deployment.module.eks.aws_eks_cluster.this",
            "module.eks_deployment.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_deployment.module.eks.aws_iam_role.this",
            "module.eks_deployment.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.eks_deployment.module.eks.aws_security_group_rule.cluster",
            "module.eks_deployment.module.eks.aws_security_group_rule.node",
            "module.eks_deployment.module.eks.data.aws_caller_identity.current",
            "module.eks_deployment.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_deployment.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_deployment.module.eks.data.aws_iam_session_context.current",
            "module.eks_deployment.module.eks.data.aws_partition.current",
            "module.eks_deployment.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_deployment.module.eks.module.kms.aws_kms_key.this",
            "module.eks_deployment.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_deployment.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_deployment.module.eks.module.kms.data.aws_partition.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_partition.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_region.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.time_sleep.dataplane",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_deployment[0].module.eks_blueprints_kubernetes_addons.module.cert_manager[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "3584",
                "uid": "09fb6201-b129-4e90-8709-7f32156a3875"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks_deployment.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_deployment.module.eks.aws_eks_cluster.this",
            "module.eks_deployment.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_deployment.module.eks.aws_iam_role.this",
            "module.eks_deployment.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_deployment.module.eks.aws_security_group.cluster",
            "module.eks_deployment.module.eks.aws_security_group.node",
            "module.eks_deployment.module.eks.aws_security_group_rule.cluster",
            "module.eks_deployment.module.eks.aws_security_group_rule.node",
            "module.eks_deployment.module.eks.data.aws_caller_identity.current",
            "module.eks_deployment.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_deployment.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_deployment.module.eks.data.aws_iam_session_context.current",
            "module.eks_deployment.module.eks.data.aws_partition.current",
            "module.eks_deployment.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_deployment.module.eks.module.kms.aws_kms_key.this",
            "module.eks_deployment.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_deployment.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_deployment.module.eks.module.kms.data.aws_partition.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_partition.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.data.aws_region.current",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.module.cert_manager.aws_iam_policy.cert_manager",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.module.cert_manager.data.aws_iam_policy_document.cert_manager_iam_policy_document",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.module.cert_manager.data.aws_route53_zone.selected",
            "module.eks_deployment.module.eks_blueprints_kubernetes_addons.time_sleep.dataplane",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:network-acl/acl-0ed8c28f483c4ba6c",
            "default_network_acl_id": "acl-0ed8c28f483c4ba6c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ed8c28f483c4ba6c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "897196112581",
            "subnet_ids": [
              "subnet-000ed2cea9d4ec99a",
              "subnet-01664d63da017749d",
              "subnet-06f355ebac66a76bd",
              "subnet-070a51ed02078cd45",
              "subnet-08a9ce5fe47a37e1b",
              "subnet-0f1ce6c69d0e4a8e0"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-default",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-default",
              "Terraform_Managed": "true"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:route-table/rtb-063b568c0b005c4b4",
            "default_route_table_id": "rtb-063b568c0b005c4b4",
            "id": "rtb-063b568c0b005c4b4",
            "owner_id": "897196112581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-default",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-default",
              "Terraform_Managed": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:security-group/sg-00a6d20bd7b1ecbed",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00a6d20bd7b1ecbed",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "897196112581",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-default",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-default",
              "Terraform_Managed": "true"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09306d9ea223f6c80",
            "association_id": "eipassoc-0ec41eff0ea917244",
            "domain": "vpc",
            "id": "eipalloc-09306d9ea223f6c80",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00c6b75ed7f458a7c",
            "private_dns": "ip-10-0-0-77.us-east-2.compute.internal",
            "private_ip": "10.0.0.77",
            "public_dns": "ec2-3-133-30-200.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.30.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-us-east-2a",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-us-east-2a",
              "Terraform_Managed": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:internet-gateway/igw-0f88bff3423891013",
            "id": "igw-0f88bff3423891013",
            "owner_id": "897196112581",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev",
              "Terraform_Managed": "true"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09306d9ea223f6c80",
            "association_id": "eipassoc-0ec41eff0ea917244",
            "connectivity_type": "public",
            "id": "nat-0fa4db13bb01f6fbe",
            "network_interface_id": "eni-00c6b75ed7f458a7c",
            "private_ip": "10.0.0.77",
            "public_ip": "3.133.30.200",
            "subnet_id": "subnet-000ed2cea9d4ec99a",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-us-east-2a",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-us-east-2a",
              "Terraform_Managed": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dc8ec3e729ede1241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fa4db13bb01f6fbe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc8ec3e729ede124",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f88bff3423891013",
            "id": "r-rtb-04f963643258ffa301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f963643258ffa30",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:route-table/rtb-0dc8ec3e729ede124",
            "id": "rtb-0dc8ec3e729ede124",
            "owner_id": "897196112581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa4db13bb01f6fbe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-private",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-private",
              "Terraform_Managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:route-table/rtb-04f963643258ffa30",
            "id": "rtb-04f963643258ffa30",
            "owner_id": "897196112581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f88bff3423891013",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-public",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-public",
              "Terraform_Managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005b89a3a81381fc7",
            "route_table_id": "rtb-0dc8ec3e729ede124",
            "subnet_id": "subnet-08a9ce5fe47a37e1b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f0dcb9ffbf03b9f",
            "route_table_id": "rtb-0dc8ec3e729ede124",
            "subnet_id": "subnet-0f1ce6c69d0e4a8e0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067f85140b410a4e8",
            "route_table_id": "rtb-0dc8ec3e729ede124",
            "subnet_id": "subnet-06f355ebac66a76bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed9a1228c02cede5",
            "route_table_id": "rtb-04f963643258ffa30",
            "subnet_id": "subnet-000ed2cea9d4ec99a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d9726cc6d99ac5",
            "route_table_id": "rtb-04f963643258ffa30",
            "subnet_id": "subnet-01664d63da017749d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2ae0dde5478ee94",
            "route_table_id": "rtb-04f963643258ffa30",
            "subnet_id": "subnet-070a51ed02078cd45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:subnet/subnet-08a9ce5fe47a37e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a9ce5fe47a37e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897196112581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-private-us-east-2a",
              "Terraform_Managed": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-private-us-east-2a",
              "Terraform_Managed": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:subnet/subnet-0f1ce6c69d0e4a8e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1ce6c69d0e4a8e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897196112581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-private-us-east-2b",
              "Terraform_Managed": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-private-us-east-2b",
              "Terraform_Managed": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:subnet/subnet-06f355ebac66a76bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f355ebac66a76bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897196112581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-private-us-east-2c",
              "Terraform_Managed": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-private-us-east-2c",
              "Terraform_Managed": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:subnet/subnet-000ed2cea9d4ec99a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000ed2cea9d4ec99a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897196112581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-public-us-east-2a",
              "Terraform_Managed": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-public-us-east-2a",
              "Terraform_Managed": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:subnet/subnet-01664d63da017749d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01664d63da017749d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897196112581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-public-us-east-2b",
              "Terraform_Managed": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-public-us-east-2b",
              "Terraform_Managed": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:subnet/subnet-070a51ed02078cd45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070a51ed02078cd45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897196112581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev-public-us-east-2c",
              "Terraform_Managed": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev-public-us-east-2c",
              "Terraform_Managed": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ec6c6c2de9ee2bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897196112581:vpc/vpc-06ec6c6c2de9ee2bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed8c28f483c4ba6c",
            "default_route_table_id": "rtb-063b568c0b005c4b4",
            "default_security_group_id": "sg-00a6d20bd7b1ecbed",
            "dhcp_options_id": "dopt-0399ea5a2cb412e54",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ec6c6c2de9ee2bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063b568c0b005c4b4",
            "owner_id": "897196112581",
            "tags": {
              "Environment": "dev",
              "Name": "comet-dev",
              "Terraform_Managed": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comet-dev",
              "Terraform_Managed": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}